# frx

./: .gitignore  README.md  download.py  justfile  mup_sweep.py  pyproject.toml  sweep.py  train.py
docs/: index.html  mup_sweep.html  sweep.html  train.html
docs/frx/: helpers.html  index.html  mup.html  sweep.html  tracking.html  train.html  vit.html
docs/html/: download.html  train.html
docs/html/src/frx/: helpers.html  index.html  vit.html
docs/md/: download.md  train.md
docs/md/src/frx/: helpers.md  index.md  vit.md
experiments/: mup.toml
experiments/mup-demo/: sp-baseline.toml
frx/: __init__.py  helpers.py  mup-experiment.md  mup.py  schema.sql  tracking.py  train.py  vit.py
src/frx/: __init__.py  helpers.py  vit.py
