[project]
name = "frx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aim>=3.24.0",
    "beartype>=0.18.5",
    "datasets>=3.0.0",
    "einops>=0.8.0",
    "equinox>=0.11.6",
    "jax>=0.2.34",
    "jaxtyping",
    "optax>=0.2.3",
    "torch>=0.8.10",
    "torchvision>=0.19.1",
    "tyro",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = ["F722"]
